--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,15 @@ p {
 }
 ul {
   padding-left: 0;
+  }
+.container{
+
+width:90%;
+
 }
+
 ul li {
+
   list-style: none;
 }
 h2 {
@@ -83,6 +90,7 @@ a:hover {
 .navbar-header .navbar-brand {
   padding: 5px 0;
 }
+
 .navbar-header .navbar-brand a {
   height: auto;
   display: inline-block;
@@ -114,6 +122,7 @@ a:hover {
   color: #444;
 }
 #top-bar .main-menu li {
+  
   position: relative;
 }
 #top-bar .main-menu li a {
@@ -124,6 +133,7 @@ a:hover {
   -o-transition: .3s all;
   transition: .3s all;
   text-transform: uppercase;
+ 
 }
 #top-bar .main-menu li a:hover {
   color: #02bdd5;
@@ -1097,4 +1107,22 @@ article {
   padding: 8px 0;
   color: #fff;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.form-control{
+ 
+    margin-top:10px;
+    width : 340px
+}
+
+
+#top-bar .main-menu li #signin{
+ color:white;
+ background:#444;
+
+}
+
+#top-bar .navbar-nav > li > #signin:hover {
+background:#444;
+
 }
