--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -1,3 +1,9 @@
+label{
+  font-family: sans-serif;
+  font-size: 18px;
+  margin-left: 0px;
+}
+
 .category img{
     width: 200px;
     height: 300px;
