heat for bassam

--- a/css/main.css
+++ b/css/main.css
@@ -1232,3 +1232,30 @@ overflow:hidden;
 padding-right:28px;
 
 }
+
+
+
+
+
+
+
+
+////////////////////////////////////////heart shape (wishlist)///////////
+
+.heart {
+          width: 100px;
+          height: 100px;
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          background: url('../images/heart.png') no-repeat;  
+          cursor: pointer;
+          
+        }
+        .heart-blast {
+          background-position: -2800px 0;
+          transition: background 1s steps(28);
+        }
+
+/////////////////////////////////////////////////////
