--- a/css/main.css
+++ b/css/main.css
@@ -397,8 +397,9 @@ figure .slide {
 
 }
 figure figcaption {
-  padding: 20px 25px;
-  margin-top: 0;
+  padding-top:20px;
+  padding-bottom:15px;
+  margin: 0;
   color: #666;
 }
 figure figcaption h4 {
@@ -1193,23 +1194,23 @@ figure .mybooks-overlay:hover a {
 
 /* //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 
-span .Buy{
+/*span .Buy{
 color : white;
 margin-left : 5%;
 background-color:#666; 
 width : 40%;
-}
+}*/
 
-span .price{
+ .price{
 line-height:40px;
-width : 58%;
+width : 50%;
 border: solid 1px #666;
 text-align:center;
 color:#666;
- font-size: 22px;
- font-weight: 300;
-font-size: 20px;
- margin-left:5px;
+font-size: 22px;
+font-weight: 300;
+margin-left:15px;
+ 
 
 }
 
@@ -1240,22 +1241,15 @@ padding-right:28px;
 
 
 
-////////////////////////////////////////heart shape (wishlist)///////////
+/*////////////////////////////////////////heart shape (wishlist)///////////*/
 
 .heart {
-          width: 100px;
-          height: 100px;
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%, -50%);
-          background: url('../images/heart.png') no-repeat;  
-          cursor: pointer;
-          
+       
         }
+
         .heart-blast {
           background-position: -2800px 0;
           transition: background 1s steps(28);
         }
 
-/////////////////////////////////////////////////////
+
