adding book not quite right

--- a/addbook/css/style.css
+++ b/addbook/css/style.css
@@ -1,10 +1,10 @@
 /* @extend display-flex; */
-display-flex, .form-flex, .form-row, .add-info-link {
+#addBook display-flex, .form-flex, .form-row, .add-info-link {
   display: flex;
   display: -webkit-flex; }
 
 /* @extend list-type-ulli; */
-list-type-ulli, ul {
+#addBook list-type-ulli, ul {
   list-style-type: none;
   margin: 0;
   padding: 0; }
@@ -57,7 +57,7 @@ list-type-ulli, ul {
   font-style: italic;
   font-weight: 900;
   src: url("../fonts/montserrat/montserrat-v12-latin-900.ttf"), url("../fonts/montserrat/montserrat-v12-latin-900.eot") format("embedded-opentype"), url("../fonts/montserrat/montserrat-v12-latin-900.svg") format("woff2"), url("../fonts/montserrat/montserrat-v12-latin-900.woff") format("woff"), url("../fonts/montserrat/montserrat-v12-latin-900.woff2") format("truetype"); }
-a:focus, a:active {
+  #addBook a:focus, #addBook a:active {
   text-decoration: none;
   outline: none;
   transition: all 300ms ease 0s;
@@ -66,7 +66,7 @@ a:focus, a:active {
   -o-transition: all 300ms ease 0s;
   -ms-transition: all 300ms ease 0s; }
 
-input, select, textarea {
+  #addBook input, #addBook select,#addBook textarea {
   outline: none;
   appearance: unset !important;
   -moz-appearance: unset !important;
@@ -74,7 +74,7 @@ input, select, textarea {
   -o-appearance: unset !important;
   -ms-appearance: unset !important; }
 
-input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+  #addBook input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
   appearance: none !important;
   -moz-appearance: none !important;
   -webkit-appearance: none !important;
@@ -82,7 +82,7 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
   -ms-appearance: none !important;
   margin: 0; }
 
-input:focus, select:focus, textarea:focus {
+  #addBook input:focus, #addBookselect:focus, #addBook textarea:focus {
   outline: none;
   box-shadow: none !important;
   -moz-box-shadow: none !important;
@@ -90,72 +90,52 @@ input:focus, select:focus, textarea:focus {
   -o-box-shadow: none !important;
   -ms-box-shadow: none !important; }
 
-input[type=checkbox] {
+  #addBook nput[type=checkbox] {
   appearance: checkbox !important;
   -moz-appearance: checkbox !important;
   -webkit-appearance: checkbox !important;
   -o-appearance: checkbox !important;
   -ms-appearance: checkbox !important; }
 
-input[type=radio] {
+  #addBook input[type=radio] {
   appearance: radio !important;
   -moz-appearance: radio !important;
   -webkit-appearance: radio !important;
   -o-appearance: radio !important;
   -ms-appearance: radio !important; }
 
-input[type=number] {
+  #addBook input[type=number] {
   -moz-appearance: textfield !important;
   appearance: none !important;
   -webkit-appearance: none !important; }
 
-input:-webkit-autofill {
+  #addBook input:-webkit-autofill {
   box-shadow: 0 0 0 30px transparent inset;
   -moz-box-shadow: 0 0 0 30px transparent inset;
   -webkit-box-shadow: 0 0 0 30px transparent inset;
   -o-box-shadow: 0 0 0 30px transparent inset;
   -ms-box-shadow: 0 0 0 30px transparent inset; }
 
-img {
-  max-width: 100%;
-  height: auto; }
 
-figure {
-  margin: 0; }
-
-p {
-  margin-bottom: 0px;
-  font-size: 15px;
-  color: #777; }
-
-h2 {
-  line-height: 1.66;
-  margin: 0;
-  padding: 0;
-  font-weight: 900;
-  color: #222;
-  font-family: 'Montserrat';
-  font-size: 24px;
-  text-transform: uppercase;
-  text-align: center;
-  margin-bottom: 40px; }
 
 .clear {
   clear: both; }
 
-body {
-  font-size: 13px;
-  line-height: 1.8;
-  color: #222;
-  font-weight: 600;
-  font-family: 'Montserrat';
-  background: #c5e9ff;
-  padding: 115px 0; }
-
-a {
-  color: #1da0f2; }
-
-.container {
+  .main{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 999; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+  }
+  
+  #addBook .container {
   width: 680px;
   position: relative;
   margin: 0 auto;
@@ -200,16 +180,16 @@ a {
   -ms-border-radius: 5px;
   background-color: #ebebeb; }
 
-label, input {
+  #addBook label, #addBook input {
   display: block;
   width: 100%; }
 
-label {
+  #addBook label {
   text-transform: uppercase;
   font-weight: 800;
   margin-bottom: 3px; }
 
-input {
+  #addBook input {
   border: 1px solid #ebebeb;
   border-radius: 5px;
   -moz-border-radius: 5px;
@@ -221,21 +201,21 @@ input {
   font-size: 14px;
   font-weight: bold;
   font-family: 'Montserrat'; }
-  input:focus {
+  #addBook input:focus {
     border: 1px solid #1da0f2; }
-  input::-webkit-input-placeholder {
+    #addBook input::-webkit-input-placeholder {
     color: #999;
     text-transform: uppercase;
     font-weight: 600; }
-  input::-moz-placeholder {
+    #addBookinput::-moz-placeholder {
     color: #999;
     text-transform: uppercase;
     font-weight: 600; }
-  input:-ms-input-placeholder {
+    #addBook input:-ms-input-placeholder {
     color: #999;
     text-transform: uppercase;
     font-weight: 600; }
-  input:-moz-placeholder {
+    #addBook input:-moz-placeholder {
     color: #999;
     text-transform: uppercase;
     font-weight: 600; }
@@ -337,29 +317,29 @@ input {
 .add_info {
   display: none; }
 
-ul {
+  #addBook ul {
   background: 0 0;
   position: relative;
   z-index: 9; }
 
-ul li {
+  #addBook ul li {
   padding: 5px 0px;
   z-index: 2;
   color: #222;
   font-size: 14px;
   font-weight: 900; }
 
-ul li:not(.init) {
+  #addBookul li:not(.init) {
   display: none;
   background: #fff;
   color: #222;
   padding: 5px 10px; }
 
-ul li:not(.init):hover, ul li.selected:not(.init) {
+  #addBook ul li:not(.init):hover, ul li.selected:not(.init) {
   background: #1da0f2;
   color: #fff; }
 
-li.init {
+  #addBook li.init {
   cursor: pointer;
   position: relative;
   border: 1px solid #ebebeb;
@@ -369,7 +349,7 @@ li.init {
   -webkit-border-radius: 5px;
   -o-border-radius: 5px;
   -ms-border-radius: 5px; }
-  li.init:after {
+  #addBook li.init:after {
     position: absolute;
     right: 20px;
     top: 50%;
@@ -432,7 +412,7 @@ input.error {
   z-index: 9; }
 
 @media screen and (max-width: 768px) {
-  .container {
+  #addBook .container {
     width: calc( 100% - 30px);
     max-width: 100%; } }
 
