--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ a:hover {
   padding: 140px 0;
 }
 .navbar-default .navbar-nav > li > a:hover {
-  color: #02bdd5;
+  color: #f44336;
 }
 .navbar.navbar-default {
   border: 0;
@@ -138,7 +138,7 @@ a:hover {
  
 }
 #top-bar .main-menu li a:hover {
-  color: #02bdd5;
+  color: #f44336;
 }
 .navbar-custom .nav li > a {
   position: relative;
@@ -209,7 +209,7 @@ a:hover {
   border-radius: 0;
 }
 #call-to-action {
-  background: #02bdd5;
+  background: #444;
   background-size: cover;
   background-attachment: fixed;
   padding: 80px 0;
@@ -233,9 +233,9 @@ a:hover {
   margin-top: 20px;
 }
 #call-to-action .block .btn-contact {
-  background: #fff;
+  background: #f44336;
   border: none;
-  color: #02bdd5;
+  color: #fff;
   padding: 16px 35px;
   margin-top: 20px;
   font-size: 12px;
@@ -389,7 +389,7 @@ figure .slide {
 
 }
 figure figcaption {
-
+  height : 100px;
   padding-top:20px;
   padding-bottom:15px;
   margin-top: 0;
@@ -399,7 +399,7 @@ figure figcaption h4 {
   margin: 0;
 }
 figure figcaption h4 a {
-  color: #02bdd5;
+  color: #f44336;
 }
 figure figcaption p {
   font-size: 14px;
@@ -432,7 +432,7 @@ figure figcaption p {
 #feature .icon {
   text-decoration: none;
   color: #fff;
-  background-color: #02bdd5;
+  background-color: #f44336;
   height: 100px;
   text-align: center;
   width: 100px;
@@ -455,10 +455,10 @@ figure figcaption p {
   margin-top: 35px;
   color: #fff;
   outline: none;
-  background: #02bdd5;
+  background: #f44336;
 }
 #contact-section .contact-form .btn-send:hover {
-  border: 1px solid #02bdd5;
+  border: 1px solid #f44336;
 }
 #contact-section input {
   display: block;
@@ -508,7 +508,7 @@ figure figcaption p {
 #contact-section .email i,
 #contact-section .phone i {
   font-size: 45px;
-  color: #02bdd5;
+  color: #f44336;
 }
 #contact-section .address h5,
 #contact-section .email h5,
@@ -535,7 +535,7 @@ figure figcaption p {
   margin-top: 10px;
 }
 #footer .copyright a {
-  color: #02bdd5;
+  color: #f44336;
 }
 #footer .social {
   text-align: right;
@@ -547,10 +547,10 @@ figure figcaption p {
 }
 #footer .social li a {
   font-size: 22px;
-  color: #02bdd5;
+  color: #f44336;
 }
 .cd-headline.slide .cd-words-wrapper {
-  color: #02bdd5;
+  color: #f44336;
 }
 ul.social-icons {
   height: auto;
@@ -576,7 +576,7 @@ ul.social-icons li {
   background-size: cover;
   padding: 120px 0 25px 0;
   position: relative;
-  background: #02bdd5;
+  background: #444;
   color: #fff;
 }
 .global-page-header h2 {
@@ -609,7 +609,7 @@ ul.social-icons li {
 }
 #product-showcase-banner .block h2 {
   font-size: 40px;
-  color: #02bdd5;
+  color: #f44336;
   margin-bottom: 20px;
   margin-top: 0;
 }
@@ -727,7 +727,7 @@ ul.social-icons li {
 }
 #related-items .block h4 span {
   float: right;
-  color: #02bdd5;
+  color: #f44336;
 }
 #related-items .block .img-overly {
   position: relative;
@@ -763,7 +763,7 @@ ul.social-icons li {
 }
 .service-page .service-parts .block i {
   font-size: 35px;
-  color: #02bdd5;
+  color: #f44336;
 }
 .service-page .service-parts .block p {
   padding: 0 8px;
@@ -821,7 +821,7 @@ ul.social-icons li {
 }
 .wrapper_404 h1 {
   font-size: 200px;
-  color: #02bdd5;
+  color: #f44336;
   line-height: 1;
 }
 .wrapper_404 h2 {
@@ -869,7 +869,7 @@ ul.social-icons li {
   font-size: 13px;
 }
 .team-member h3 {
-  color: #02bdd5;
+  color: #f44336;
   margin-bottom: 0;
   font-size: 20px;
 }
@@ -877,7 +877,7 @@ ul.social-icons li {
   font-size: 14px;
 }
 .team-member .social-icons a {
-  background: #02bdd5;
+  background: #f44336;
   color: #fff;
   padding: 4px 8px;
   display: inline-block;
@@ -899,7 +899,7 @@ ul.social-icons li {
   font-weight: 300;
 }
 .about-feature .about-feature-1 {
-  background: #02bdd5;
+  background: #f44336;
 }
 .about-feature .about-feature-2 {
   background: #00B0C7;
@@ -939,15 +939,15 @@ article {
   margin-top: 20px;
 }
 .blog-content .btn-details {
-  color: #02bdd5;
+  color: #f44336;
   padding: 0;
-  background: #02bdd5;
+  background: #f44336;
   color: #fff;
   padding: 8px 18px;
   border-radius: 0;
   margin-top: 15px;
   border: 1px solid #fff;
-  box-shadow: 0px 0px 0px 1px #02bdd5;
+  box-shadow: 0px 0px 0px 1px #f44336;
 }
 .blog-post-image {
   margin-top: 30px;
@@ -1016,7 +1016,7 @@ margin-top : 20px;
   font-size: 15px;
 }
 .sidebar .recent-post ul li a:hover {
-  color: #02bdd5;
+  color: #f44336;
 }
 .sidebar .recent-post time {
   font-weight: 300;
@@ -1057,7 +1057,7 @@ margin-top : 20px;
   padding: 30px 20px;
 }
 .single-post .media .media-body a {
-  color: #02bdd5;
+  color: #f44336;
   font-size: 12px;
 }
 .single-post .media .media {
@@ -1077,7 +1077,7 @@ margin-top : 20px;
   border-radius: 0;
 }
 .single-post .post-comment .btn-send {
-  background: #02bdd5;
+  background: #f44336;
   color: #fff;
   border-radius: 0;
 }
@@ -1088,7 +1088,7 @@ margin-top : 20px;
 .social-share a {
   font-size: 20px;
   color: #fff;
-  background: #02bdd5;
+  background: #f44336;
   padding: 4px 10px;
   display: inline-block;
 }
@@ -1133,7 +1133,7 @@ margin-top : 20px;
 
 #top-bar .main-menu li #signin{
  color:white;
- background:#444;
+ background:#f44336;
 
 }
 
@@ -1207,11 +1207,12 @@ line-height:40px;
 width : 50%;
 border: solid 1px #666;
 text-align:center;
-color:#666;
+color:white;
 font-size: 22px;
 font-weight: 300;
 margin-left:15px;
-
+border-radius:50px;
+background:#555;
 }
 
 
@@ -1246,9 +1247,12 @@ padding-right:28px;
       height: 76px;
       position: relative;
       float: right;
-      margin-top: 10px;
-      margin-left: 35px;
+      padding:0;
       margin-right: 0;
+      padding-top : 40px;
+      margin-top: 18px;
+      margin-left:35px;
+    
           transform: translate(-50%, -50%);
           background: url('../images/heart.png') no-repeat;  
           cursor: pointer;
@@ -1276,3 +1280,77 @@ padding-right:28px;
        margin-left : 15px;;
        width:290px;
         }
+
+
+
+
+
+        /*////////////////mybutt ////////////////////////////////////// */
+
+        
+        .myButt {
+          
+          
+          line-height:13px;
+          width : 50%;
+          float:left;
+          text-align:center;
+          color:white;
+         
+          margin-left:15px;
+          border-radius:50px;
+          background:#555;
+
+          outline: none;
+
+     
+          display: block;
+       
+          cursor: pointer;
+          font-size: 20px;
+          background-color: transparent;
+          position: relative;
+          border: 2px solid #444;
+          transition: all 0.5s ease;
+          -webkit-transition: all 0.5s ease;
+          -moz-transition: all 0.5s ease;
+          -o-transition: all 0.5s ease;
+          -ms-transition: all 0.5s ease;
+         }
+
+        .one {
+          border-color: #444;
+          overflow: hidden;
+          color: white;
+          background-color : #444;
+       }
+        .one .insider {
+          background-color: #fff;
+          width: 100%;
+          height: 20px;
+          position: absolute;
+          left: -135px;
+          transform: rotateZ(45deg);
+          -webkit-transform: rotateZ(45deg);
+          -moz-transform: rotateZ(45deg);
+          -o-transform: rotateZ(45deg);
+          -ms-transform: rotateZ(45deg);
+       }
+        .one:hover {
+          background-color: #f44336;
+          border-color: #fff;
+          color: #fff;
+          
+       }
+        .one:hover .insider {
+          transition: all 0.3s ease;
+          -webkit-transition: all 0.3s ease;
+          -moz-transition: all 0.3s ease;
+          -o-transition: all 0.3s ease;
+          -ms-transition: all 0.3s ease;
+          left: 135px;
+       }
+        
+
+
+        /*//////////////////////////////////////////////////////////*/
