--- a/css/main.css
+++ b/css/main.css
@@ -1353,3 +1353,30 @@ padding-right:28px;
 
 
         /*//////////////////////////////////////////////////////////*/
+
+
+        /* /////////////////////////Checkout///////////////////////*/
+
+
+
+@import "compass/css3";
+ .dl-small {
+	 margin-bottom: 4px;
+}
+ 
+ 
+ .form-control-small {
+	 width: 100px;
+}
+ .form-control-large {
+	 width: 310px;
+}
+ 
+
+
+
+
+
+
+
+        /*///////////////////////////////////////////////*/
