--- a/css/main.css
+++ b/css/main.css
@@ -1380,3 +1380,10 @@ padding-right:28px;
 
 
         /*///////////////////////////////////////////////*/
+
+
+        /*/////////////checkout //////////////*/
+
+      
+
+        /*/////////////////////////////////////*/
