--- a/css/main.css
+++ b/css/main.css
@@ -1125,7 +1125,8 @@ margin-top : 20px;
 }
 
 .form-control{
-    margin-top:10px;
+    margin-top:0px;
+    margin-bottom:10px;
     width : 500px
 }
 
@@ -1371,19 +1372,3 @@ padding-right:28px;
  .form-control-large {
 	 width: 310px;
 }
- 
-
-
-
-
-
-
-
-        /*///////////////////////////////////////////////*/
-
-
-        /*/////////////checkout //////////////*/
-
-      
-
-        /*/////////////////////////////////////*/
