--- a/css/main.css
+++ b/css/main.css
@@ -1285,8 +1285,8 @@ padding-right:28px;
          }
         .margining{
        margin-top : 70px;
-       margin-left : 15px;;
-       width:290px;
+       margin-left : 65px;
+       width:300px;
         }
 
 
